istio/sample/bookinfo/raw/detail.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      containers:
      - name: details
        # image: istio/examples-bookinfo-details-v1
        image: r.qihoo.cloud/mirror/istio/example/bookinfo-details:v1 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
