istio/sample/bookinfo/raw/rating.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ratings-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      containers:
      - name: ratings
        # image: istio/examples-bookinfo-ratings-v1
        image: r.qihoo.cloud/mirror/istio/example/bookinfo-ratings:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
