istio/sample/bookinfo/raw/review.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - name: reviews
        # image: istio/examples-bookinfo-reviews-v1
        image: r.qihoo.cloud/mirror/istio/example/bookinfo-reviews:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v2
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      containers:
      - name: reviews
        # image: istio/examples-bookinfo-reviews-v2
        image: r.qihoo.cloud/mirror/istio/example/bookinfo-reviews:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v3
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      containers:
      - name: reviews
        # image: istio/examples-bookinfo-reviews-v3
        image: r.qihoo.cloud/mirror/istio/example/bookinfo-reviews:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
